{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 716,
  "lineage": "f0d8eaf6-fb59-7ff8-0bb9-7584c3da639d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e1f1960dbed94c1",
            "arn": "arn:aws:ec2:ap-south-1:256600409744:elastic-ip/eipalloc-02e1f1960dbed94c1",
            "association_id": "eipassoc-03a5244fdad152d26",
            "domain": "vpc",
            "id": "eipalloc-02e1f1960dbed94c1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a97363b199bac8be",
            "private_dns": "ip-172-20-1-45.ap-south-1.compute.internal",
            "private_ip": "172.20.1.45",
            "public_dns": "ec2-13-206-58-161.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.58.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-nat-eip",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-nat-eip",
              "Project": "NIT"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:internet-gateway/igw-01c4848b711e8be93",
            "id": "igw-01c4848b711e8be93",
            "owner_id": "256600409744",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-igw",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-igw",
              "Project": "NIT"
            },
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/app/nit-dev-fe-alb/0c08a72c0dea277c",
            "arn_suffix": "app/nit-dev-fe-alb/0c08a72c0dea277c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nit-dev-fe-alb-1470403540.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/app/nit-dev-fe-alb/0c08a72c0dea277c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nit-dev-fe-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a308507ab6659594"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06fd4412b8f3a0f5b"
              },
              {
                "subnet_id": "subnet-0dad17888ad714146"
              }
            ],
            "subnets": [
              "subnet-06fd4412b8f3a0f5b",
              "subnet-0dad17888ad714146"
            ],
            "tags": {
              "Name": "nit-dev-fe-alb"
            },
            "tags_all": {
              "Name": "nit-dev-fe-alb"
            },
            "vpc_id": "vpc-0b771092c6e1aaa8e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/net/nit-dev-nlb/034c95137cf669bd",
            "arn_suffix": "net/nit-dev-nlb/034c95137cf669bd",
            "dns_name": "nit-dev-nlb-034c95137cf669bd.elb.ap-south-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/net/nit-dev-nlb/034c95137cf669bd",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nit-dev-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d99f755d11770a6"
              },
              {
                "subnet_id": "subnet-0840e04960c3ba890"
              }
            ],
            "subnets": [
              "subnet-06d99f755d11770a6",
              "subnet-0840e04960c3ba890"
            ],
            "tags": {
              "Name": "nit-dev-nlb"
            },
            "tags_all": {
              "Name": "nit-dev-nlb"
            },
            "vpc_id": "vpc-0b771092c6e1aaa8e",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:listener/app/nit-dev-fe-alb/0c08a72c0dea277c/09bb5c4063f18adf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:targetgroup/nit-dev-fe-tg/cab7404a7d387475",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:listener/app/nit-dev-fe-alb/0c08a72c0dea277c/09bb5c4063f18adf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/app/nit-dev-fe-alb/0c08a72c0dea277c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.frontend_alb",
            "aws_lb_target_group.fe_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:listener/net/nit-dev-nlb/034c95137cf669bd/0340a08e61c27fbe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:targetgroup/nit-dev-be-tg/f2cb538493274772",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:listener/net/nit-dev-nlb/034c95137cf669bd/0340a08e61c27fbe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/net/nit-dev-nlb/034c95137cf669bd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.be_tg",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "be_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:targetgroup/nit-dev-be-tg/f2cb538493274772",
            "arn_suffix": "targetgroup/nit-dev-be-tg/f2cb538493274772",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "8084",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:targetgroup/nit-dev-be-tg/f2cb538493274772",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/net/nit-dev-nlb/034c95137cf669bd"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nit-dev-be-tg",
            "port": 8084,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fe_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:targetgroup/nit-dev-fe-tg/cab7404a7d387475",
            "arn_suffix": "targetgroup/nit-dev-fe-tg/cab7404a7d387475",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8501",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:256600409744:targetgroup/nit-dev-fe-tg/cab7404a7d387475",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:256600409744:loadbalancer/app/nit-dev-fe-alb/0c08a72c0dea277c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nit-dev-fe-tg",
            "port": 8501,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nit-dev-fe-tg"
            },
            "tags_all": {
              "Name": "nit-dev-fe-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e1f1960dbed94c1",
            "association_id": "eipassoc-03a5244fdad152d26",
            "connectivity_type": "public",
            "id": "nat-039ca052905c384f2",
            "network_interface_id": "eni-0a97363b199bac8be",
            "private_ip": "172.20.1.45",
            "public_ip": "13.206.58.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dad17888ad714146",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-nat-gw",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-nat-gw",
              "Project": "NIT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_1",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:route-table/rtb-0b0122ccd0d38f977",
            "id": "rtb-0b0122ccd0d38f977",
            "owner_id": "256600409744",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039ca052905c384f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nit-dev-private-rt"
            },
            "tags_all": {
              "Name": "nit-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:route-table/rtb-0efa0f2384ade43bb",
            "id": "rtb-0efa0f2384ade43bb",
            "owner_id": "256600409744",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c4848b711e8be93",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nit-dev-public-rt"
            },
            "tags_all": {
              "Name": "nit-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.nit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f27e5f547207dbc",
            "route_table_id": "rtb-0b0122ccd0d38f977",
            "subnet_id": "subnet-0840e04960c3ba890"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2687810c91ceeed",
            "route_table_id": "rtb-0b0122ccd0d38f977",
            "subnet_id": "subnet-06d99f755d11770a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef3ede81401ac931",
            "route_table_id": "rtb-0efa0f2384ade43bb",
            "subnet_id": "subnet-0dad17888ad714146"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f33aac3beeda92c",
            "route_table_id": "rtb-0efa0f2384ade43bb",
            "subnet_id": "subnet-06fd4412b8f3a0f5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:security-group/sg-0a308507ab6659594",
            "description": "Allow HTTP 80 from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a308507ab6659594",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nit-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "256600409744",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nit-dev-alb-sg"
            },
            "tags_all": {
              "Name": "nit-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "be_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:security-group/sg-0d3c3e3eb041a6231",
            "description": "Allow 8084 from NLB private subnet CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3c3e3eb041a6231",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.10.0/24",
                  "172.20.11.0/24"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              }
            ],
            "name": "nit-dev-be-sg",
            "name_prefix": "",
            "owner_id": "256600409744",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nit-dev-be-sg"
            },
            "tags_all": {
              "Name": "nit-dev-be-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fe_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:security-group/sg-020da01d04ada56d5",
            "description": "Allow 8501 from ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020da01d04ada56d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a308507ab6659594"
                ],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "nit-dev-fe-sg",
            "name_prefix": "",
            "owner_id": "256600409744",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nit-dev-fe-sg"
            },
            "tags_all": {
              "Name": "nit-dev-fe-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.nit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:security-group/sg-0999f082fcb6c00e6",
            "description": "Allow 80 from FE SG (reference only)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0999f082fcb6c00e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020da01d04ada56d5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nit-dev-nlb-sg",
            "name_prefix": "",
            "owner_id": "256600409744",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nit-dev-nlb-sg"
            },
            "tags_all": {
              "Name": "nit-dev-nlb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.fe_sg",
            "aws_vpc.nit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:security-group/sg-026168f91fd8e62b5",
            "description": "Allow MySQL 3306 from BE SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026168f91fd8e62b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3c3e3eb041a6231"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "nit-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "256600409744",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nit-dev-rds-sg"
            },
            "tags_all": {
              "Name": "nit-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.be_sg",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:subnet/subnet-0840e04960c3ba890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0840e04960c3ba890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256600409744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-private-1",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-private-1",
              "Project": "NIT"
            },
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:subnet/subnet-06d99f755d11770a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d99f755d11770a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256600409744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-private-2",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-private-2",
              "Project": "NIT"
            },
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:subnet/subnet-0dad17888ad714146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad17888ad714146",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "256600409744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-public-1",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-public-1",
              "Project": "NIT"
            },
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:subnet/subnet-06fd4412b8f3a0f5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fd4412b8f3a0f5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "256600409744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-public-2",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-public-2",
              "Project": "NIT"
            },
            "vpc_id": "vpc-0b771092c6e1aaa8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nit_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nit_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:256600409744:vpc/vpc-0b771092c6e1aaa8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-05c184a569f395142",
            "default_route_table_id": "rtb-00b650ba889f4deaa",
            "default_security_group_id": "sg-058c24b689635bf22",
            "dhcp_options_id": "dopt-0840c389c49ff7324",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b771092c6e1aaa8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b650ba889f4deaa",
            "owner_id": "256600409744",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-vpc",
              "Project": "NIT"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "nit-dev-vpc",
              "Project": "NIT"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}